--- a/Experiment-07/Exp-7.ipynb
+++ b/Experiment-07/Exp-7.ipynb
@@ -32,7 +32,7 @@
    ],
    "source": [
     "# Dataset Prep\n",
-    "data_path = r\"C:\\Users\\LENOVO\\Desktop\\Python\\Datasets\\Alzeimehers\\Data\"\n",
+    "data_path = r\"C:\\Users\\SIDH\\Desktop\\Python\\Datasets\\Alzeimehers\\Data\"\n",
     "\n",
     "datagen = ImageDataGenerator(rescale=1./255,\n",
     "                             validation_split=0.2,  \n",
